--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head><meta charset="UTF-8" /><title>Shreeeyan Shopping Mart</title></head>
 <body>
-<h1>Shreeeyan Shopping Mart</h1>
+<h1>Welcome to Shreeeyan Ganji Shopping Mart</h1>
 <p><a href="/user/register">Register</a> | <a href="/user/checkout">Checkout</a></p>
 <h2>Products</h2>
 <ul>
